--- a/package.json
+++ b/package.json
@@ -15,5 +15,32 @@
   "bugs": {
     "url": "https://github.com/herickcorrea/gulp-preset-babel-browsersync/issues"
   },
-  "homepage": "https://github.com/herickcorrea/gulp-preset-babel-browsersync#readme"
+  "homepage": "https://github.com/herickcorrea/gulp-preset-babel-browsersync#readme",
+  "devDependencies": {
+    "@babel/core": "^7.7.0",
+    "@babel/preset-env": "^7.7.1",
+    "babel": "^6.23.0",
+    "babel-core": "^6.26.3",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babelify": "^10.0.0",
+    "browser-sync": "^2.26.7",
+    "gulp": "^4.0.2",
+    "gulp-babel": "^8.0.0",
+    "gulp-babel-minify": "^0.5.1",
+    "gulp-concat": "^2.6.1",
+    "gulp-connect-php": "^1.0.3",
+    "gulp-csso": "^3.0.1",
+    "gulp-imagemin": "^6.1.1",
+    "gulp-less": "^4.0.1",
+    "gulp-less-import": "^1.0.0",
+    "gulp-less-sourcemap": "^1.4.4",
+    "gulp-rename": "^1.4.0",
+    "gulp-sourcemaps": "^2.6.5",
+    "gulp-strip-debug": "^3.0.0",
+    "gulp-uglify-es": "^2.0.0",
+    "gulp-webp": "^4.0.1",
+    "vinyl-buffer": "^1.0.1",
+    "vinyl-source-stream": "^2.0.0"
+  }
 }
