--- a/package.json
+++ b/package.json
@@ -42,5 +42,8 @@
     "gulp-webp": "^4.0.1",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0"
+  },
+  "dependencies": {
+    "decompress": "^4.2.1"
   }
 }
